--- a/Frontend/app/src/main/res/values/themes.xml
+++ b/Frontend/app/src/main/res/values/themes.xml
@@ -1,5 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
 
-    <style name="Theme.SmartFarming" parent="android:Theme.Material.Light.NoActionBar" />
+    <style name="Theme.SmartFarming" parent="android:Theme.Material.Light.NoActionBar" >
+        <item name="android:statusBarColor">@color/status_bar</item>
+        <item name="android:colorBackground">@color/background</item>
+    </style>
 </resources>
